// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Card/Card AllColors smoke-test 1`] = `
<div data-test-block="true">
  <div class="_card_lg4k9_5 bottomSpacingXL"
       data-color="ochre"
       data-spacing="m"
  >
    <div class="_cardContent_qt0f6_1">
      <div>
        Gruppering av opplysninger i skjema, for eksempel inntekter, personer eller oppsummeringer.
      </div>
    </div>
  </div>
  <div class="_card_lg4k9_5 bottomSpacingXL"
       data-color="forest"
       data-spacing="m"
  >
    <div class="_cardContent_qt0f6_1">
      <div>
        Gruppering av opplysninger i skjema, for eksempel inntekter, personer eller oppsummeringer.
      </div>
    </div>
  </div>
  <div class="_card_lg4k9_5 bottomSpacingXL"
       data-color="burgundy"
       data-spacing="m"
  >
    <div class="_cardContent_qt0f6_1">
      <div>
        Gruppering av opplysninger i skjema, for eksempel inntekter, personer eller oppsummeringer.
      </div>
    </div>
  </div>
  <div class="_card_lg4k9_5 bottomSpacingXL"
       data-color="denim"
       data-spacing="m"
  >
    <div class="_cardContent_qt0f6_1">
      <div>
        Gruppering av opplysninger i skjema, for eksempel inntekter, personer eller oppsummeringer.
      </div>
    </div>
  </div>
  <div class="_card_lg4k9_5 bottomSpacingXL"
       data-color="graphite"
       data-spacing="m"
  >
    <div class="_cardContent_qt0f6_1">
      <div>
        Gruppering av opplysninger i skjema, for eksempel inntekter, personer eller oppsummeringer.
      </div>
    </div>
  </div>
  <div class="_card_lg4k9_5 bottomSpacingXL"
       data-color="white"
       data-spacing="m"
  >
    <div class="_cardContent_qt0f6_1">
      <div>
        Gruppering av opplysninger i skjema, for eksempel inntekter, personer eller oppsummeringer.
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Card/Card Defaults play-test 1`] = `
<div data-test-block="true">
  <div class="_card_lg4k9_5"
       data-color="white"
       data-spacing="m"
  >
    Gruppering av opplysninger i skjema, for eksempel inntekter, personer eller oppsummeringer.
  </div>
</div>
`;

exports[`Tester/Card/Card WithAriaLabelledBy play-test 1`] = `
<div data-test-block="true">
  <section class="_card_lg4k9_5"
           data-color="white"
           aria-labelledby="dummyId"
           data-spacing="m"
  >
    Gruppering av opplysninger i skjema, for eksempel inntekter, personer eller oppsummeringer.
  </section>
</div>
`;

exports[`Tester/Card/Card WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div id="htmlId"
       class="_card_lg4k9_5 dummyClassname"
       lang="en"
       data-testid="123ID"
       data-color="white"
       data-spacing="m"
  >
    Gruppering av opplysninger i skjema, for eksempel inntekter, personer eller oppsummeringer.
  </div>
</div>
`;

exports[`Tester/Card/Card WithRef play-test 1`] = `
<div data-test-block="true">
  <div class="_card_lg4k9_5"
       data-color="white"
       data-spacing="m"
       id="dummyIdForwardedFromRef"
  >
    Gruppering av opplysninger i skjema, for eksempel inntekter, personer eller oppsummeringer.
  </div>
</div>
`;
